@@ -49,13 +49,13 @@ void MoveTo(Cursor &C, Cursor::size_type N, Cursor::size_type NewPos)
 }
 
 
-int main()
+int main(int, char *argv[])
 {
   try
   {
     const string Table = "events";
 
-    Connection C;
+    Connection C(argv[1]);
     Transaction T(C, "test19");
 
     // Count rows.
