@@ -1,6 +1,7 @@
 2003-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
- include/pqxx/connection.h:
+ include/pqxx/connection.h, src/connection.cxx, test/test43.cxx:
   - #include <memory>
+  - Disabled controversial default constructor for now
  include/pqxx/transactionitf.h, test/test*.cxx:
   - Added Exec() version taking query argument in std::string form
 2003-02-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
